--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^1.20.2",
     "gulp-util": "^3.0.7",
     "lodash": "^4.13.1",
+    "noisejs": "^2.1.0",
     "pubsub-js": "^1.5.3",
     "three": "^0.89.0"
   },
