--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.13.1",
     "noisejs": "^2.1.0",
     "pubsub-js": "^1.5.3",
+    "stats-js": "^1.0.0-alpha1",
     "three": "^0.89.0"
   },
   "devDependencies": {
