--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "npm-run-all --parallel gulp server"
   },
   "dependencies": {
+    "color": "^3.0.0",
     "dat-gui": "^0.5.0",
     "gsap": "^1.20.2",
     "gulp-util": "^3.0.7",
